--- a/assets/css/styles-grid.css
+++ b/assets/css/styles-grid.css
@@ -1,13 +1,155 @@
+:root {
+    --nav-height: 3.75em;
+}
+
 *, *::before, *::after {
     box-sizing: border-box;
 }
 
-nav {
-    /* Needs to be sticky. */
+/***** Globals *****/
+div {
+    margin: 2rem auto;
 }
 
+/***** Nav rules *****/
+nav {
+    position: fixed;
+    min-width: 100%;
+    height: var(--nav-height);
+
+    background-color: white;
+
+    font-family: 'Monteserrat', sans-serif;
+    text-align: center;
+}
+
+#logo {
+    float: left;
+    margin-left: 2em;
+}
+
+#logo img {
+    max-height: var(--nav-height);
+    display: inline;
+}
+
+/*** Dropdown menu ***/
+nav ul.menu {
+    list-style-type: none;
+    float: right;
+    margin-right: 2em;
+
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+nav ul li {
+    padding: 1rem;
+    position: relative;
+    list-style: none;
+}
+
+li:hover {
+    cursor: pointer;
+}
+
+.menu-item:hover {
+    background-color: #e2e2e2;
+}
+
+.dropdown li:hover {
+    background: #a2a2a2;
+}
+
+nav .menu .menu-item .dropdown {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    margin-top: 1rem;
+    left: 0;
+    display: none;
+    background: #e2e2e2;
+}
+
+nav .menu .menu-item:hover > .dropdown,
+nav .menu .menu-item .dropdown:hover {
+    visibility: visible;
+    opacity: 1;
+    display: block;
+}
+
+nav .menu .menu-item .dropdown li {
+    clear: both;
+    width: 100%;
+}
+
+nav ul.dropdown li.menu-item {
+    font-family: 'Monteserrat', sans-serif;
+    text-align: center;
+}
+
+/***** Main content rules *****/
 main {
-    max-width: 38rem;
-    padding: 2rem;
+    /* max-width: 38rem; */
+    /* width: 100%; */
+    padding: /*var(--nav-height)*/ 1.75em 0rem 2rem;
     margin: auto;
+    /* margin-top: var(--nav-height); */
+}
+
+main div {
+
+}
+
+/* #hero {
+    margin: 2rem 5rem;
+} */
+
+#hero {
+    text-align: center;
+    /* max-height: 90em; */
+    width: 100%;
+    min-height: 35em;
+
+    background-image: url(/assets/img/banners/home-hero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50%;
+}
+
+#hero #hero-text {
+    margin-top: 2rem;
+    display: inline-block;
+    font-size: 1.5em;
+    background: rgba(90, 95, 99, 0.625);
+    width: 100%;
+    padding: 1.25rem 1.25rem 3.75rem;
+}
+
+#hero h1, #hero h2 {
+    text-transform: uppercase;
+    font-family: 'Patua One', serif;
+    color: rgb(177, 245, 155);
+}
+
+#hero h2 {
+    margin: 0 4em;
+}
+
+#hero p {
+    font-family: 'Open Sans', sans-serif;
+    margin-top: 1.5em;
+    color: rgb(255, 215, 191);
+}
+
+#quote {
+    margin: 2rem
+}
+
+#introduction {
+    margin: auto 2rem;
 }
