Some extra navbar styling
Went to showing all links in a row instead of a dropdown menu; and decreased default font-size from 1em to .875em in order to fit the links better, while not being too small and too reliant on a large resolution to not break the links onto a new line below the logo and outside the bar.

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,15 +1,16 @@
-<!-- <nav>
-    <ul>
-        <a href="/"><img src="/assets/img/electorials-logo.jpeg"></a>
+<nav>
+    <a href="/" id="logo"><img src="/assets/img/electorials-logo.jpeg"></a>
+    <ul class="menu">
         {% for item in site.data.navigation %}
         <li class="{{ item.class }}">
             <a href="{{ item.link }}">{{ item.name }}</a>
         </li>
         {% endfor %}
     </ul>
-</nav> -->
+</nav>
 
-<nav role="navigation">
+<!-- For dropdown menu -->
+<!-- <nav role="navigation">
     <a href="/" id="logo"><img src="/assets/img/electorials-logo.jpeg"></a>
     <ul class="menu">
         {% for item in site.data.navigation.mainnav %}
@@ -27,4 +28,4 @@
         </li>
         {% endfor %}
     </ul>
-</nav>
+</nav> -->
