--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,6 +7,10 @@
 }
 
 /***** Globals *****/
+* {
+    line-height: 1.8em;
+}
+
 div {
     margin: 2rem auto;
 }
@@ -51,7 +55,6 @@ nav ul.menu {
 nav ul li {
     padding: 1rem;
     position: relative;
-    list-style: none;
     font-size: .875em;
 }
 
@@ -63,6 +66,7 @@ li:hover {
     background-color: #e2e2e2;
 }
 
+/** Dropdown menu rules start **/
 .dropdown li:hover {
     background: #a2a2a2;
 }
@@ -93,6 +97,7 @@ nav ul.dropdown li.menu-item {
     font-family: 'Monteserrat', sans-serif;
     text-align: center;
 }
+/** Dropdown menu rules end **/
 
 /***** Main content rules *****/
 main {
@@ -154,4 +159,60 @@ main div {
 
 #introduction {
     margin: auto 2rem;
+}
+
+/***** Footer content rules *****/
+footer {
+    padding: 2.75em 2em;
+    min-width: 100%;
+    background-color: white;
+    font-family: 'Lato', sans-serif;
+    text-align: center;
+
+    border-top: 1px solid red;
+}
+
+footer hr {
+
+}
+
+#footer-links ul {
+    list-style-type: none;
+    margin: 2em;
+
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#footer-links,
+#footer-links ul,
+#footer-links ul li {
+    margin-top: 0;
+}
+
+/* This li is .footer-item */
+footer ul li {
+    padding: 1rem;
+    font-size: 1em;
+}
+
+.footer-item:hover {
+    background-color: #e2e2e2;
+}
+
+#footer-banner {
+    font-family: 'Patua One', sans-serif;
+    font-size: 1rem;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+
+#copyright {
+    float: right;
+    font-size: 1em;
+    font-family: 'Lato', sans-serif;
 }
