--- a/assets/css/styles-grid.css
+++ b/assets/css/styles-grid.css
@@ -54,9 +54,16 @@ nav {
 }
 
 .menu-item a {
-    padding: 1rem .75rem;
-    font-size: .75em;
+    --item-width: 100%;
+    display: flex;
+    padding: 1.125rem .875rem;
+    font-size: .875em;
+    width: var(--item-width);
+    transform: translateX(calc((100% - var(--item-width)) / 2 ));
+    line-height: 1.6em;
 }
+/* Navbar overflows at 1175px. Later create media query to change styling at
+1180px or above. */
 
 .menu-item a:hover {
     background-color: #e2e2e2;
@@ -217,3 +224,13 @@ footer ul li {
     font-size: 1em;
     font-family: 'Lato', sans-serif;
 }
+
+/* * { background-color: rgba(255,0,0,.2); }
+* * { background-color: rgba(0,255,0,.2); }
+* * * { background-color: rgba(0,0,255,.2); }
+* * * * { background-color: rgba(255,0,255,.2); }
+* * * * * { background-color: rgba(0,255,255,.2); }
+* * * * * * { background-color: rgba(255,255,0,.2); }
+* * * * * * * { background-color: rgba(255,0,0,.2); }
+* * * * * * * * { background-color: rgba(0,255,0,.2); }
+* * * * * * * * * { background-color: rgba(0,0,255,.2); } */
