Preparing pages for content and later styling
Also redid the styling for the hero image for more uniform styling across all pages.

--- a/_layouts/grid.html
+++ b/_layouts/grid.html
@@ -8,7 +8,7 @@ file for those pages.-->
     <head>
         <meta charset="utf-8">
         <title>{{ page.title }} – {{ site.title }}</title>
-        <meta name="description" content="Electorials is a free website for the electronic community hobbyist."
+        <meta name="description" content="Electorials is a free website for the electronic community hobbyist.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Favicon stuff to add later -->
