--- a/assets/css/styles-grid.css
+++ b/assets/css/styles-grid.css
@@ -153,16 +153,39 @@ main {
     margin: 0;
     min-height: 35em;
 
-    background-repeat: no-repeat;
-    background-size: cover;
+    background: -webkit-linear-gradient(bottom, rgba(0,0,0,0.25), rgba(0,0,0,0.25)),
+    var(--hero-image);
+    background: -o-linear-gradient(bottom, rgba(0,0,0,0.25), rgba(0,0,0,0.25)),
+    var(--hero-image);
+    background: linear-gradient(to top, rgba(0,0,0,0.25), rgba(0,0,0,0.25)),
+    var(--hero-image);
     background-position: 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+        /* `background-size: cover` fits the image into the element's space by
+        the image's shortest dimension. `background-position` is shorthand for
+        `background-position-x` and `background-position-y`, with `-y`
+        defaulting to `center` if `background-position` is only used.
+
+        If the image is tall, `background-position-y` can be adjusted by
+        percentage; adjusting `background-position-x` does nothing. Vice versa
+        for wide images: `-x` is adjustable while adjusting `-y` does nothing.
+        Abandon `background-position` and use its `-x` and `-y` pairs if the
+        image is tall.
+
+        Note that the above works ONLY IF `background-size: cover` is present.
+        If not, then both `background-position`s are adjustable, but the image
+        will NOT scale up nor down to fill the space.
+
+        Percentages make understanding the adjusting easier than with other
+        units, but is still possible with rems and inches for example. The
+        percent unit is based on the element's space, which is why it should
+        make adjusting easier to understand.*/
 }
 
 .hero-text {
-    margin-top: 2rem;
     display: inline-block;
-    font-size: 1.5em;
-    background: rgba(90, 95, 99, 0.625);
+    /* font-size: 1.5em; */
     width: 100%;
     padding: 1.25rem 1.25rem 3.75rem;
 }
