New logo with increased navbar height and adjustments for the new logo
- Logo is an .svg image instead of a .jpg image.
    Meant for needing to use one file instead of multiple files of different resolutions
- Logo needed a .125rem padding so it would not be sitting right on the navbar line
- `var(--nav-height)` changed to `100%` since they're essentially the same, but with less text
- `.logo` needs height or else the logo will flow outside the navbar

--- a/assets/css/styles-grid.css
+++ b/assets/css/styles-grid.css
@@ -1,5 +1,5 @@
 :root {
-    --nav-height: 3.75em;
+    --nav-height: 4rem;
 }
 
 *, *::before, *::after {
@@ -42,12 +42,17 @@ nav {
 .logo {
     float: left;
     margin: 0 1em;
+    height: 100%;
 }
 
 .logo,
 .logo img {
-    max-height: var(--nav-height);
+    max-height: 100%;
     display: inline;
+}
+
+.logo img {
+    padding: .125rem;
 }
 
 /*** Nav menu ***/
@@ -55,7 +60,7 @@ nav {
     list-style-type: none;
     float: right;
     margin: 0 1em;
-    height: var(--nav-height);
+    height: 100%;
 
     display: -webkit-box;
     display: -ms-flexbox;
