--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <nav>
-    <a href="/" class="logo"><img src="/assets/img/electorials-logo.jpeg"></a>
+    <a href="/" class="logo"><img src="/assets/img/electorials-logo.svg"></a>
     <ul class="menu">
         {% for item in site.data.navigation %}
         <li class="{{ item.class }}">
