Fixed navbar bottom border floating out
No longer an "outline"-border, but now a border itself.
Borders add to a content's box size. So wherever the box height is hard-defined, the non-border content gets squeezed.
To counter that, the total height of the navbar is now the original height, *plus* the height of the original border. The end result is the same visual output, but done with a different method that won't make the border floating out of the navbar area.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,8 +24,11 @@ body {
 nav {
     position: fixed;
     min-width: 100%;
-    height: var(--nav-height);
-
+    height: calc(var(--nav-height) + .125rem);
+    /* .125rem is border width.
+    Replaces outline declaration issue that would
+    flow outside of nav. Also keeps nav content height at 4rem when border is
+    added.*/
     background-color: white;
 
     font-family: 'Monteserrat', sans-serif;
@@ -35,7 +38,7 @@ nav {
     /* Without this, the hr lines strangely would be visible in the navbar
     because of their opacity declaration. */
 
-    outline: #ff6100 .125rem solid;
+    border-bottom: #ff6100 .125rem solid;
     /* Adds bottom outline to the navbar. */
 }
 
