Viewport width-wide bottom border for `main`
Meant to separate the main content from the footer content.
Adding `border-top` to <footer> would only go as far as <footer>'s max width, being 60rem.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -132,6 +132,7 @@ nav ul.dropdown li.menu-item {
 
 main {
     padding: calc(var(--nav-height) - 2em) 0 0;
+    border-bottom: solid #ff6100 .125rem;
 }
 
 .content {
