--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,13 +22,6 @@ body {
 
 /***** Nav rules *****/
 nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
     position: fixed;
     min-width: 100%;
     height: calc(var(--nav-height) + .125rem);
@@ -51,7 +44,7 @@ nav {
 
 .logo {
     float: left;
-    margin: 0 1em;
+    margin: .5rem;
     height: 100%;
 }
 
@@ -431,6 +424,10 @@ footer ul li {
 
     nav {
         height: calc(var(--nav-height) + .125rem);
+    }
+
+    .logo {
+        margin: 1.5rem;
     }
 
     .menu-item a {
