Logo size changed to 5rem
Margin also adjusted to keep it centred.

Formula used to find margin value: ((height of nav) - (max-height of `.logo, .logo img`)) / 16 / 2 = number of rems.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -427,7 +427,12 @@ footer ul li {
     }
 
     .logo {
-        margin: 1.5rem;
+        margin: 1rem;
+    }
+
+    .logo,
+    .logo img {
+        max-height: 5rem;
     }
 
     .menu-item a {
