Removed .main-content class value
I don't remember why I put this in, and I haven't referred to it in the CSS at all.

Could have been in anticipation of possible specificity fights in the future. Nothing like that has happened (so far), so those 13 bytes shouldn't be necessary.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         <![endif]-->
 
         <main>
-            <div class="content main-content">
+            <div class="content">
                 {{ content }}
             </div>
         </main>
